# racli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.agents/skills/: racli.md
.github/workflows/: ci.yml
benches/: search.rs
docs/: high-level-architecture.md
proto/: racli.proto
src/: client.rs  find_definition.rs  grpc_server.rs  lib.rs  lsp_client.rs  lsp_map.rs  main.rs  mcp.rs  proto.rs  racli_live_backend.rs  racli_session.rs  rust_analyzer.rs  search.rs  server.rs  transport.rs  workspace_file_watcher.rs
src/lsp_client/: transport.rs
src/mcp/: mcp_proto_json.rs
src/transport/: socket_server.rs  socketwrapper.rs
tests/: find_definition.rs  live_backend.rs  search.rs  server.rs
