[package]
name = "racli"
description = "a rust-analyzer client"
version = "0.1.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/aisrael/racli"
readme = "README.md"
license = "MIT"
exclude = [
    ".github/*"
]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo"] }
prost = "0.14"
rmcp = "1.6"
thiserror = "2"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
