[package]
name = "racli"
description = "a rust-analyzer client"
version = "0.2.0"
edition = "2024"
build = "build.rs"
repository = "https://github.com/aisrael/racli"
readme = "README.md"
license = "MIT"
exclude = [
    ".github/*"
]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo"] }
jsonrpsee = { version = "0.26.0", features = ["async-client", "client-core"] }
lsp-types = "0.97.0"
notify = "8.0"
prost = "0.14"
rmcp = "1.6"
schemars = { version = "1.2", features = ["chrono04"] }
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
criterion = "0.5"
libc = "0.2"
tempfile = "3"

[[bench]]
name = "search"
harness = false
